Improve macro package